# ECommerceAI

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 0c280850ef19_initial_schema.py
backend/app/: database.py  main.py  models.py  repositories.py  schemas.py
backend/tests/: test_api.py
frontend/: Dockerfile  app.py  pyproject.toml
nginx/: default.conf
rag_engine/: .dockerignore  Dockerfile  pyproject.toml
rag_engine/app/: __init__.py  config.py  graph.py  hardware.py  main.py  tools.py
rag_engine/app/clients/: __init__.py  llm_client.py  postgres_client.py  qdrant_client.py
rag_engine/app/nodes/: __init__.py  analyzer.py  ranker.py  responder.py  retriever.py
rag_engine/scripts/: sync_vectors.py
