[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = "E-Commerce AI System Gateway"
authors = ["Author <author@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.139.0"
uvicorn = "^0.49.0"
sqlalchemy = "^2.0.51"
alembic = "^1.18.5"
psycopg2-binary = "^2.9.12"
pydantic = "^2.13.4"
pydantic-settings = "^2.14.2"
httpx = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
httpx = "^0.28.1"
pytest-asyncio = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:.*starlette.testclient.*"
]
