[tool.poetry]
name = "gradio-frontend"
version = "0.1.0"
description = "E-Commerce AI System UI"
authors = ["Author <author@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
gradio = "^6.19.0"
requests = "^2.34.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
